# nomad-distro-template-test

./: .gitignore  Dockerfile  Dockerfile.voila  README.md  docker-compose.yaml  jupyterhub_config.py  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nomad.yaml
scripts/: cleanup-voila-containers.sh
