[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = { file = "LICENSE" }
dependencies = [
  #"nomad-lab>=1.3.15",
  #Temporary pint units patch for nomad-lab, 
  #TODO: revert back to central nomad-lab when EFG units are included.
  "nomad-lab @ git+https://github.com/CCP-NC/nomad-FAIR-nmr-units-patch.git@main",
  "setuptools",
  "nomad-schema-plugin-run>=1.0.1",
  #"nomad-parser-plugins-electronic>=1.0",
  # Patched version of nomad-parser-plugins-electronic
  # TODO: remove when reverting nomad-lab to central version
  "nomad-parser-plugins-electronic @ git+https://github.com/CCP-NC/nomad-parser-plugins-electronic-patch.git@main",
  "nomad-parser-plugins-atomistic>=1.0.6",
  "ccpnc-oasis-app @ git+https://github.com/CCP-NC/ccpnc-oasis-app.git@afa087841740930af46ed97f5ce1c49de380b7f7",
  "nomad-oasis-schema-parser-plugin @ git+https://github.com/CCP-NC/nomad-oasis-schema-parser-plugin.git@9f5b1e87e82b5e6b83497c9968407b027883451f",]


[project.urls]
repository = "https://github.com/sathya-s3/nomad-distro-template-test"

[project.optional-dependencies]
jupyter = [
  "voila",
  "ipyaggrid",
  "ipysheet",
  "ipydatagrid",
  "jupyter-flex",
  "pyOpenSSL",
]
dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.4"]
plugins = []

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
#remove override when final version is available
override-dependencies = [
  "nomad-nmr-schema @ git+https://github.com/FAIRmat-NFDI/nomad-schema-plugin-nmr.git@f799401d8981eb9080f18e26d524d8eb7535488e",
]
prerelease = "disallow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
